mui white extra space fix

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  widht: "100vh";
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -8,6 +9,7 @@ body {
 }
 body {
   height: "100%";
+
   overflow-x: hidden;
 }
 
